tests/valid/functions/later_decl.rs
/*
executionExitCode: 5
*/

foo(a: i64): i64 {
    return a + 1;
}

main(): i32 {
    return foo(4);
}

foo(a: i64): i64;