tests/invalid/functions/declaration.rs
/*
compilationExitCode: 2
*/

foo(a: i64): i64;

main(): i32 {
    return 5;
}

foo(a: i64): i64 {
    return 4;
}